--- a/srg_gaction_changelog_app.yml
+++ b/srg_gaction_changelog_app.yml
@@ -1,5 +1,5 @@
-name: 'Hello World'
-description: 'Greet someone'
+name: 'Srg auto collect changelog'
+description: 'Auto collect changelog'
 inputs:
   who-to-greet:  # id of input
     description: 'Who to greet'
