--- a/action.yml
+++ b/action.yml
@@ -55,8 +55,8 @@ runs:
 
     - run: |
 
-        PR_NUMBER=${{ github.event.pull_request.number }}
-        REPO_NAME=${{ github.repository }}
+        PR_NUMBER="${{ github.event.pull_request.number }}"
+        REPO_NAME="${{ github.repository }}"
         API_URL="https://api.github.com/repos/$REPO_NAME/pulls/$PR_NUMBER/commits"
 
         TEMP_FILE="temp.txt"
@@ -66,13 +66,9 @@ runs:
 
         echo "Pull request number: $PR_NUMBER"
 
-        PR_MERGED=${{ github.event.pull_request.merged }}
+        PR_MERGED="${{ github.event.pull_request.merged }}"
         if [ "$PR_MERGED" = "true" ]; then
-          PR_NUMBER=${{ github.event.pull_request.number }}
-          echo "Pull request number: $PR_NUMBER"
-
           jq_installed=$(command -v jq)
-
           if [ -z "$jq_installed" ]; then
             echo "jq is not installed on the machie, exit..." 
             exit 1
@@ -89,10 +85,10 @@ runs:
         fi
       shell: bash
 
-    # - run: |
-    #     PR_TITLE="${{ github.event.pull_request.title }}"
-    #     PR_BODY="${{ github.event.pull_request.body }}"
+    - run: |
+        PR_TITLE="${{ github.event.pull_request.title }}"
+        PR_BODY="${{ github.event.pull_request.body }}"
 
-    #     echo "Pull request title --> $PR_TITLE"
-    #     echo "Pull request body --> $PR_BODY"
-    #   shell: bash
+        echo "Pull request title --> $PR_TITLE"
+        echo "Pull request body --> $PR_BODY"
+      shell: bash
