--- a/action.yml
+++ b/action.yml
@@ -42,8 +42,10 @@ runs:
     - run: pwd
       shell: bash
 
-    - name: "ZZZ -> Figure out Rnv --> 0: Pr event type"
-      run: |
+    - run: |
+        echo name: "AAA -> Figure out Rnv --> 0: Pr event type"
+        echo ""
+
         echo "github event action: ${{github.event.action}}"
         if [[ "${{ github.event_name }}" == 'pull_request' && "${{github.event.pull_request.merged}}" == true && "${{github.event.action}}" == closed ]]; then
           echo "----------------------------> PR merged and closed. <----------------------------"
@@ -57,11 +59,15 @@ runs:
         fi
       shell: bash
 
-    - run: goodbye.sh
+    - run: |
+        echo name: "AAA -> Figure out Rnv --> 0: Test srcipt"
+        echo ""
+        goodbye.sh
       shell: bash
 
-    - name: "AAA -> init env --> 1: PR_CONTENT_TXT"
-      run: |
+    - run: |
+        echo "AAA -> init env --> 1: PR_CONTENT_TXT"
+        echo ""
         echo "SRG_PR_CONTENT_TXT=pr_and_branch_info.txt" >> $GITHUB_ENV
         echo "SRG_TEMP_FILE=temp.txt" >> $GITHUB_ENV
         echo "SRG_COMMITS_FILE=commits.txt" >> $GITHUB_ENV
@@ -69,11 +75,15 @@ runs:
       shell: bash
 
     - run: |
+        echo "AAA -> init env --> 2: Get repo company name"
+        echo ""
         repo_org_name=$(get_repo_company_name.sh "SrgGactionChangelogApp")
         echo "repo_org_name --> $repo_org_name"
       shell: bash
 
     - run: |
+        echo "CCC -> Get commits --> 0: save commit message to text"
+        echo ""
         PR_NUMBER="${{ github.event.pull_request.number }}"
         REPO_NAME="${{ github.repository }}"
         API_URL="https://api.github.com/repos/$REPO_NAME/pulls/$PR_NUMBER/commits"
@@ -99,8 +109,7 @@ runs:
       if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
       shell: bash
 
-    - name: "GGG -> init env --> 2: write PR info in file: ${{ env.SRG_PR_CONTENT_TXT }}"
-      if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
+    - if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
       uses: DamianReeves/write-file-action@master
       with:
         path: "./${{ env.SRG_PR_CONTENT_TXT }}"
@@ -110,10 +119,11 @@ runs:
           "${{ github.event.pull_request.body }}"
         write-mode: overwrite
 
-    - name: "extract jira ticket from pr and commits"
-      if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
+    - if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
       id: export_outputs_step
       run: |
+        echo "extract jira ticket from pr and commits"
+        echo ""
         pwd
         pwd=$(pwd)
         echo "pwd -> $pwd"
@@ -123,9 +133,11 @@ runs:
         echo "srg_test_output=Hello_output_gaction" >> $GITHUB_OUTPUT
       shell: bash
 
-    - name: "WWW -> Cat Files --> 0: txt files"
-      if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
+    - if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
       run: |
+        echo "WWW -> Cat Files --> 0: txt files"
+        echo ""
+
         echo "------------- pull_request closed and merged ------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}"
         echo "--------------------------------------"
@@ -134,9 +146,10 @@ runs:
         cat "${{ env.SRG_COMMITS_FILE }}"
         echo "--------------------------------------"
       shell: bash
-    - name: "ZZZ -> Clean up --> 0: txt files"
-      if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
+    - if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}
       run: |
+        echo "ZZZ -> Clean up --> 0: txt files"
+        echo ""
         echo "------------- pull_request closed and merged ------------"
         rm -f "${{ env.SRG_PR_CONTENT_TXT }}"
         rm -f "${{ env.SRG_TEMP_FILE }}"
