--- a/action.yml
+++ b/action.yml
@@ -149,9 +149,11 @@ runs:
     - run: |
         echo "ZZZ -> Clean up --> 0: txt files"
         echo ""
+        echo "if if if: ${{ github.event_name == 'pull_request' }}"
+        echo "if if if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}"
         echo "if if if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}"
-        echo "if if if: ${{ github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}"
-        echo "if if if: ${{ github.event.pull_request.merged == 'true' }}"
+
+
         echo "------------- pull_request closed and merged ------------"
         rm -f "${{ env.SRG_PR_CONTENT_TXT }}"
         rm -f "${{ env.SRG_TEMP_FILE }}"
