--- a/action.yml
+++ b/action.yml
@@ -152,6 +152,7 @@ runs:
         echo "if if if: ${{ github.event_name == 'pull_request' }}"
         echo "if if if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' }}"
         echo "if if if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true' }}"
+        echo "if if if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}"
 
 
         echo "------------- pull_request closed and merged ------------"
