--- a/action.yml
+++ b/action.yml
@@ -66,7 +66,7 @@ runs:
       shell: bash
 
     - run: |
-        echo "AAA -> init env --> 1: PR_CONTENT_TXT"
+        echo "AAA -> Init env --> 1: Init file name into GITHUB_ENV"
         echo ""
         echo "SRG_PR_CONTENT_TXT=pr_and_branch_info.txt" >> $GITHUB_ENV
         echo "SRG_TEMP_FILE=temp.txt" >> $GITHUB_ENV
@@ -140,7 +140,8 @@ runs:
         echo "------------- pull_request closed and merged ------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}"
         echo "--------------------------------------"
-        cat "${{ env.SRG_TEMP_FILE }}"
+        echo "--------------------------------------"
+        echo "--------------------------------------"
         echo "--------------------------------------"
         cat "${{ env.SRG_COMMITS_FILE }}"
         echo "--------------------------------------"
