--- a/action.yml
+++ b/action.yml
@@ -145,8 +145,11 @@ runs:
         echo "--------------------------------------"
         echo "--------------------------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}" | grep -i -E "(feat|fix|ci|chore|docs):" | cut -d '-' -f2- | sort -u | sort -n |sed -e 's/([^()]*)//g' 
-
         echo "--------------------------------------"
+        echo "--------------------------------------"
+        cat "${{ env.SRG_COMMITS_FILE }}" | grep -i -E "(feat|fix|ci|chore|docs):" | cut -d '-' -f2- | sort -u | sort -n |sed -e 's/([^()]*)//g' 
+
+
         echo "--------------------------------------"
         echo "--------------------------------------"
         cat "${{ env.SRG_COMMITS_FILE }}"
