--- a/action.yml
+++ b/action.yml
@@ -138,7 +138,8 @@ runs:
         echo ""
 
         echo "------------- pull_request closed and merged ------------"
-        cat "${{ env.SRG_PR_CONTENT_TXT }}\n"
+        cat "${{ env.SRG_PR_CONTENT_TXT }}"
+        echo ""
 
         #extract description by grep feat|fix|ci|chore|docs|merge from release_note_log
         echo "--------------------------------------"
