--- a/action.yml
+++ b/action.yml
@@ -101,6 +101,7 @@ runs:
           cat "./${{ env.SRG_TEMP_FILE}}"
           echo "---------------------------------------------"
           cat "./${{ env.SRG_TEMP_FILE}}" | jq -r '.[] | "\(.commit.message)"' > "./${{ env.SRG_COMMITS_FILE }}"
+          echo "" > "./${{ env.SRG_COMMITS_FILE }}"
           cat "./${{ env.SRG_COMMITS_FILE }}"
 
         else
@@ -117,6 +118,7 @@ runs:
           ${{ github.head_ref }}
           ${{ github.event.pull_request.title }}
           ${{ github.event.pull_request.body }}
+          \n
         write-mode: overwrite
 
     - if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
