--- a/action.yml
+++ b/action.yml
@@ -140,18 +140,12 @@ runs:
         pattern_commit_convention="feat|fix|ci|chore|docs"
         pattern_jira_tickets="([a-z]{2,}-)([0-9]+)"
 
-        #extract description by grep feat|fix|ci|chore|docs|merge from release_note_log
-        echo "--------------------------------------"
-        echo "--------------------------------------"
+        echo "------------------ extract commit message --------------------"
         cat "${{ env.SRG_PR_CONTENT_TXT }}" | grep -i -E "(${pattern_commit_convention}):" | sort -u | sort -n |sed -e 's/([^()]*)//g' 
-        echo "--------------------------------------"
-        echo "--------------------------------------"
         cat "${{ env.SRG_COMMITS_FILE }}" | grep -i -E "(${pattern_commit_convention}):" | sort -u | sort -n |sed -e 's/([^()]*)//g' 
 
-
-        echo "--------------------------------------"
-        echo "--------------------------------------"
-        #extract ticket from release_note_log by grep ([a-z]{2,}-)([0-9]+)
+        echo "------------------ extract jira ticket--------------------"
+        cat "${{ env.SRG_COMMITS_FILE }}" | grep -Eo "$pattern_jira_tickets" | sort -u | sort -n 
         cat "${{ env.SRG_PR_CONTENT_TXT }}" | grep -Eo "$pattern_jira_tickets" | sort -u | sort -n 
 
       shell: bash
