--- a/action.yml
+++ b/action.yml
@@ -149,7 +149,7 @@ runs:
         cat "${{ env.SRG_COMMITS_FILE }}" | grep -i -E "(${pattern_commit_convention}):" | sort -u | sort -n |sed -e 's/([^()]*)//g' >> "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
         echo "uuuuuuuuuuuuuu"
-        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}" | sort -u | sort -n > temp.txt $$ mv temp.txt ${{ env.SRG_OUTPUT_COMMITS_FILE }}
+        cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}" | sort -u | sort -n > temp.txt && mv temp.txt ${{ env.SRG_OUTPUT_COMMITS_FILE }}
         cat "${{ env.SRG_OUTPUT_COMMITS_FILE }}"
 
 
@@ -159,7 +159,7 @@ runs:
         cat "${{ env.SRG_COMMITS_FILE }}" | grep -Eo "${pattern_jira_tickets}" | sort -u | sort -n >> "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
         echo "uuuuuuuuuuuuuu"
-        cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}" | sort -u | sort -n > temp.txt $$ mv temp.txt ${{ env.SRG_OUTPUT_TICKETS_FILE }}
+        cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}" | sort -u | sort -n > temp.txt && mv temp.txt ${{ env.SRG_OUTPUT_TICKETS_FILE }}
         cat "${{ env.SRG_OUTPUT_TICKETS_FILE }}"
 
 
