--- a/action.yml
+++ b/action.yml
@@ -175,11 +175,11 @@ runs:
           if (($ticket_length >= $min_ticket_length)); then
             ticket_link="https://${{ inputs.jira_domain }}/browse/${ticket_id}"
             ticket_link_sed_form="${link_prefix_sed_form_1}${{ inputs.jira_domain }}${link_prefix_sed_form_2}${ticket_id}"
-            echo "ticket_link_sed_form:$ticket_link_sed_form"
+            echo "ticket_link_sed_form: $ticket_link_sed_form ttttt"
             echo "- [$ticket_id](${ticket_link})" >>"${{ env.SRG_OUTPUT_CHANGLOG_FILE }}"
 
             if [ "$RUNNER_OS" == "Linux" ]; then
-              sed -i "s/$ticket_id/[${ticket_id}]/g" "${{ env.SRG_COMMITS_FILE }}"
+              sed -i "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_COMMITS_FILE }}"
             elif [ "$RUNNER_OS" == "macOS" ]; then
               sed -i '' "s/$ticket_id/[${ticket_id}]($ticket_link_sed_form)/g" "${{ env.SRG_COMMITS_FILE }}"
             else
