--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,12 @@ inputs:
     required: false
     default: "([a-z]{2,}-)([0-9]+)"
     description: 'Regex for extract jira ticket'
+  google_sheet_token:
+    required: true
+    description: 'Gookge sheet token'
+  google_sheet_id:
+    required: true
+    description: 'Gookge sheet id'
 outputs:
   jira_ticket_list:
     description: "The jira tickets list form pull request and commit message"
