--- a/.github/workflows/collect_changelog_from_pr.yml
+++ b/.github/workflows/collect_changelog_from_pr.yml
@@ -15,6 +15,7 @@ jobs:
     name: "Generate changelog from PR"
     steps:
       - id: collect_jira_tickets_in_pr
+        continue-on-error: true
         uses: SweetRainGarden/SrgGactionChangelogApp@develop
         with:
           jira_domain: 'xxx.atlassian.net'
