chore: test time

--- a/action.yml
+++ b/action.yml
@@ -240,7 +240,7 @@ runs:
         current_time=$(date +"%Y/%m/%d %H:%M:%S")
         echo "SRG_ACTION_TRIGGER_TIME=${current_time}" >> $GITHUB_ENV
       shell: bash
-      if: ${{ github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+      if: ${{ github.event_name == 'pull_request' }}
 
 
     - name: "TTT -> Update Google Sheet --> 1: append data"
